tests/circular-use.lushui
;; TEST fail check

module mu: =
    use super.nu.A

module nu: =
    use super.mu.A
